tests/snapshots/bundled_code_review__a-tab-in-the-body.snap
---
source: tests/bundled_code_review.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=none scrollbar=false
  line
    text "    1 + " muted tint=added
    text "    " tint=added
    text "fmt" tint=added
    text "." tint=added
    text "Println" accent_bright tint=added
    text "(" tint=added
    text "x" tint=added
    text ")" tint=added
    fill ' ' tint=added
