tests/snapshots/bundled_code_review__a-wide-gutter.snap
---
source: tests/bundled_code_review.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  line
    text "1201 1198   " muted selected
    text "x" selected
    fill ' ' selected
  line
    text "     1199 + " muted tint=added
    text "y" tint=added
    fill ' ' tint=added
  line
    text "1202      - " muted tint=removed
    text "z" tint=removed
    fill ' ' tint=removed
